--- a/client/css/mainMenu/2-mainMenuStyles.css
+++ b/client/css/mainMenu/2-mainMenuStyles.css
@@ -11,10 +11,10 @@ h2 {
   color: lightblue;
   font-weight: bold; /* Makes the text bold */
   text-shadow: 
-    calc(-1 * var(--text-shadow-offset)) calc(-1 * var(--text-shadow-offset)) 0 #000,
-    var(--text-shadow-offset) calc(-1 * var(--text-shadow-offset)) 0 #000,
-    calc(-1 * var(--text-shadow-offset)) var(--text-shadow-offset) 0 #000,
-    var(--text-shadow-offset) var(--text-shadow-offset) 0 #000;
+    1px 1px 0 black,  /* Bottom-right shadow */
+    -1px 1px 0 black, /* Bottom-left shadow */
+    1px -1px 0 black, /* Top-right shadow */
+    -1px -1px 0 black; 
   user-select: none; /* Prevent text selection */
   cursor: default; /* Set cursor to the default type */
 }
